# CheapTripData

./: .gitignore  README.md  pom.xml
ContentAutomator/BudgetTravelTips/: .gitignore  index.html  sitemap.xml
ContentAutomator/BudgetTravelTips/css/: index.css  list.css  main.css  main__.css  target.css
ContentAutomator/BudgetTravelTips/files/: sitemap.xml  url_tag_template.xml
ContentAutomator/BudgetTravelTips/html_templates/: description.html
ContentAutomator/BudgetTravelTips/src/: index.py  insert_metrika_rb.py  lists.py  yandex_metrika.html  (+1 more)
ContentAutomator/Postify/: .gitignore  Fb_post.ipynb  fbStart.py  posts_info.json  requirements.txt  tgStart.py
ContentAutomator/PostifyNew/: .gitignore  README.md  autoFBen.py  autoFBru.py  autoVK.py  main.py  remove_scheduled.py  requirements.txt  startFB.py  startFB_EN.py  startFB_EN_new.py  startVK.py  tgStart.py
ContentAutomator/PostifyNew/socials/vk_groups/vk_get_users/: .gitignore  Makefile  README.md  database.sql  pyproject.toml
ContentAutomator/PostifyNew/socials/vk_groups/vk_get_users/vk_users/: cities.py  requests_to_vk.py  search_parameters.py  users.py  vk_users_db.py
Java/: .gitignore  Readme.md
Java/data_files/: countries.csv
Python/: .gitignore
Python/scraping/: .gitignore  pyproject.toml
Python/scrapping/: setup.cfg
Python/src/: config.py  extraction.py  functions.py  partly_adapter.py  routes_csv_from_json.py  scraping.py  seo_attractions_multiprocesses.py  seo_attractions_multiprocesses_2.py  seo_attractions_threads.py  seo_children_attractions_list_mp.py  seo_children_attractions_mp.py
(+131 files in other folders)
